@@ -34,8 +34,6 @@ import javax.lang.model.element.Name;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.DeclaredType;
-import javax.lang.model.type.TypeKind;
-import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.ElementFilter;
 import org.checkerframework.checker.interning.qual.CompareToMethod;
 import org.checkerframework.checker.interning.qual.EqualsMethod;
@@ -683,7 +681,19 @@ public class AnnotationUtils {
         for (ExecutableElement elem : valmap.keySet()) {
             if (elem.getSimpleName().contentEquals(elementName)) {
                 AnnotationValue val = valmap.get(elem);
-                return expectedType.cast(val.getValue());
+                try {
+                    return expectedType.cast(val.getValue());
+                } catch (ClassCastException e) {
+                    throw new BugInCF(
+                            "getElementValue(%s, %s, %s, %s): val=%s, val.getValue()=%s [%s]",
+                            anno,
+                            elementName,
+                            expectedType,
+                            useDefaults,
+                            val,
+                            val.getValue(),
+                            val.getValue().getClass());
+                }
             }
         }
         throw new BugInCF(
@@ -764,47 +774,6 @@ public class AnnotationUtils {
             }
         }
         return result;
-    }
-
-    // TODO: Make a version of this method that takes an ExecutableElement?
-    /**
-     * Get the element with the name {@code elementName} of the annotation {@code anno}. The element
-     * has type {@code expectedType} or array of {@code expectedType}.
-     *
-     * <p>Parameter useDefaults is used to determine whether default values should be used for
-     * annotation values. Finding defaults requires more computation, so should be false when no
-     * defaulting is needed.
-     *
-     * <p>This method is intended only for use by the framework. A checker implementation should use
-     * {@code anno.getElementValues().get(someElement).getValue();}.
-     *
-     * @param anno the annotation to disassemble
-     * @param elementName the name of the element to access
-     * @param expectedType the type used to cast the return type
-     * @param <T> the class of the type
-     * @param useDefaults whether to apply default values to the element
-     * @return the value of the element with the given name; it is a new list, so it is safe for
-     *     clients to side-effect
-     */
-    public static <T> List<T> getElementValueArrayOrSingleton(
-            AnnotationMirror anno,
-            CharSequence elementName,
-            Class<T> expectedType,
-            boolean useDefaults) {
-        for (ExecutableElement annoElement :
-                ElementFilter.methodsIn(
-                        anno.getAnnotationType().asElement().getEnclosedElements())) {
-            if (annoElement.getSimpleName().contentEquals(elementName)) {
-                TypeMirror elementType = annoElement.getReturnType();
-                if (elementType.getKind() == TypeKind.ARRAY) {
-                    return getElementValueArray(anno, elementName, expectedType, useDefaults);
-                } else {
-                    return Collections.singletonList(
-                            getElementValue(anno, elementName, expectedType, useDefaults));
-                }
-            }
-        }
-        throw new BugInCF("no " + elementName + " element in " + anno);
     }
 
     /**
