@@ -13,6 +13,12 @@ stands for (only) the `null` value.
 
 **Implementation details:**
 
+A precondition or normal postcondition annotation's `value` element must have
+type `String[]`, not `String`.  A conditinoal postcondition annotation's
+`expression` element must have type `String[]`, not `String`.  These changes
+will not affect users (any programmer-written annotation that was legal before
+will still be legal), but it may affect checker implementations.
+
 Removed deprecated `PluginUtil` class.
 
 **Closed issues:**
